--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,18 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version> <!-- Use the latest version available -->
         </dependency>
+        <!--        For reading JSON APIs-->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.2.2</version>
+        </dependency>
+        <!-- GSON: Java to JSON conversion -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
